# CI-CD-example

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/: ScopeTimer.hpp
include/MyProject/: Account.hpp
src/: Account.cpp  ScopeTimer.cpp  main.cpp
src/MemoryCheck/: mem_simple.cpp
tests/: gtest_core.cpp
